--- a/MoneySave/inputform.html
+++ b/MoneySave/inputform.html
@@ -70,7 +70,7 @@ input[type=submit]:hover {
     </select>
 
     <label for="amount" class="break-label">金額</label>
-    <input type="number" id="amount" name="金額" placeholder="Your last name.." class="break-input">
+    <input type="number" id="amount" name="金額" placeholder="輸入金額" class="break-input">
    
     <label for="subject">備註</label>
     <textarea id="subject" name="備註" placeholder="Write something.." style="height:200px"></textarea>
