--- a/MoneySave/inputform.html
+++ b/MoneySave/inputform.html
@@ -52,6 +52,8 @@ input[type=submit]:hover {
     <label for="dateInput">日期</label>
     <input type="date" id="date" name="日期" placeholder="#">
 
+    <div class="empty-row"></div> <!-- 插入空行 -->
+    
     <label for="itom"class='break-label'>類別</label>
     <select id="itom" name="類別"  class="break-input">
       <option value="存款息">存款息</option>
